--- a/themes/devfest-theme-hugo/static/theme-2024.css
+++ b/themes/devfest-theme-hugo/static/theme-2024.css
@@ -284,21 +284,31 @@ body > header {
           border-bottom-color: var(--lighten-2); }
         body > header nav a:focus, body > header nav a:hover {
           background: var(--darken-1); }
+      body > header nav li:hover .submenu {
+        display: none; }
       body > header nav .submenu {
         position: relative;
         top: 0;
         left: 0;
         width: 100%;
         box-shadow: none;
-        background: transparent; }
+        background: transparent;
+        display: none; }
         body > header nav .submenu li {
           padding-left: var(--space-4); }
           body > header nav .submenu li a {
             color: inherit;
             padding: var(--space-2) 0; }
-      body > header nav .has-children > a::after {
-        float: right;
-        margin-top: var(--space-2); }
+      body > header nav .has-children {
+        position: relative; }
+        body > header nav .has-children > a::after {
+          float: right;
+          margin-top: var(--space-2);
+          transition: transform 0.3s ease; }
+        body > header nav .has-children.active > a::after {
+          transform: rotate(180deg); }
+        body > header nav .has-children.active .submenu {
+          display: block; }
     body > header input[type=checkbox]:checked ~ nav {
       display: block; } }
 
